사진전송 기능 추가
